Unit test modernization.